# docker-context-switcher

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: WIDGET.md
macos/: DockerContextSwitcher.entitlements
macos/DockerContextWidget/: DockerContextWidget.entitlements  DockerContextWidget.swift  Info.plist
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  docker.rs  lib.rs  main.rs  platform.rs  tray.rs  widget.rs
src/components/: AddContextModal.tsx  ConfirmDialog.tsx  ContextCard.tsx  ContextList.tsx  EngineStatusCard.tsx  StatusDot.tsx
src/components/glass/: GlassButton.tsx
src/components/layout/: AuroraBackground.tsx  FooterBar.tsx  TitleBar.tsx
src/components/resources/: ContainersTab.tsx  DiskUsage.tsx  ImagesTab.tsx  NetworksTab.tsx  ResourceConsole.tsx  ResourceToast.tsx  RowAction.tsx  VolumesTab.tsx  parts.tsx
src/components/ui/: Pill.tsx
src/hooks/: useDocker.ts  useResources.ts
src/lib/: backend.ts  mock.ts  motion.ts
src/styles/: global.css
src/types/: docker.ts
