[package]
name = "docker-context-switcher"
version = "0.1.0"
description = "A liquid-glass desktop app for switching Docker contexts between local engines and remote SSH endpoints."
authors = ["docker-context-switcher contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "docker_context_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `macos-private-api` is required for the transparent + vibrancy window.
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Bounds `docker` invocations so an unreachable SSH context can't hang the UI.
wait-timeout = "0.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
